--- a/Resources/view/admin/company/index/pc/content.html.twig
+++ b/Resources/view/admin/company/index/pc/content.html.twig
@@ -44,7 +44,7 @@
 
                 <tr>
                     <th>#</th>
-                    <th class='w-100'>Рекламная компания</th>
+                    <th class='w-100'>Рекламные компании</th>
                 </tr>
 
                 </thead>
