--- a/Resources/view/admin/company/_form/pc/_template.title.html.twig
+++ b/Resources/view/admin/company/_form/pc/_template.title.html.twig
@@ -1,7 +1,7 @@
-{# шаблон для втавки в js #}
+{# шаблон для вставки в js #}
 
 {% trans_default_domain 'avito-promotion.admin' %}
-<div class="d-flex justify-content-between align-items-center">
+<div class="w-50 d-flex justify-content-between align-items-center">
 
     <div class="me-3">
         <button id="delete-avito_promotion_form_filters___key__" type="button"
@@ -13,17 +13,22 @@
         </button>
     </div>
 
-    <div class="title-predicate">
-        <i class="me-3">
-        __title__predicate__
-        </i>
-    </div>
+    <div class="w-100 d-flex justify-content-around">
 
-    <div class="w-100">
-        <span>
-            <strong>ФИЛЬТР № __number__:</strong>
-            __title__property__ -> __title__value__
-        </span>
+        <div class="title-predicate me-3" style="width: 40px;">
+            <span class="badge text-bg-primary">
+                __title__predicate__
+            </span>
+        </div>
+
+        <div class="w-75 text-start">
+            <span>
+                <small>__title__property__</small>
+                &#8658;
+                <strong> __title__value__</strong>
+            </span>
+        </div>
+
     </div>
 
 </div>
