--- a/Resources/view/admin/company/edit/template.html.twig
+++ b/Resources/view/admin/company/edit/template.html.twig
@@ -11,8 +11,8 @@
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block stylesheets %}
-    <link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
-    <link href="/assets/plugins/datepicker/datepicker.min.css" rel="stylesheet">
+    <link href="/assets/{{ version }}/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
+    <link href="/assets/{{ version }}/plugins/datepicker/datepicker.min.css" rel="stylesheet">
 {% endblock %}
 
 
@@ -23,10 +23,10 @@
 
 
 {% block javascript %}
-<script nonce='{{ csp_nonce() }}' async data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
+<script nonce='{{ csp_nonce() }}' async data-src='/assets/{{ version }}/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
             class='lazy'></script>
-    <script nonce='{{ csp_nonce() }}' async data-src="/assets/avito-promotion/company.js?v={{ version }}"
+    <script nonce='{{ csp_nonce() }}' async data-src="/assets/{{ version }}/avito-promotion/company.js?v={{ version }}"
             class="lazy"></script>
-    <script nonce='{{ csp_nonce() }}' async  data-src='/assets/plugins/datepicker/datepicker.min.js?v={{ version }}'
+    <script nonce='{{ csp_nonce() }}' async  data-src='/assets/{{ version }}/plugins/datepicker/datepicker.min.js?v={{ version }}'
             class='lazy'></script>
 {% endblock %}
