--- a/Resources/view/admin/company/index/pc/_cover.html.twig
+++ b/Resources/view/admin/company/index/pc/_cover.html.twig
@@ -2,7 +2,7 @@
 
 {#                 Обложка  #}
 
-	            {% set image_path = '/assets/img/blank.svg' %}
+	            {% set image_path = '/assets/'~version~'/img/blank.svg' %}
 
 	            {% if item.ext is defined and item.ext is not null %}
                     {% set img_host =  item.cdn == true  ? CDN_HOST : '' %}
