--- a/Resources/view/admin/company/new/content.html.twig
+++ b/Resources/view/admin/company/new/content.html.twig
@@ -2,5 +2,5 @@
 
 {{ include(_self|replace({ "content.html.twig": baks_settings.device~"/content.html.twig" })) }}
 
-<script nonce='{{ csp_nonce() }}' async data-src="/assets/avito-promotion/company.min.js?v={{ version }}"
+<script nonce='{{ csp_nonce() }}' async data-src="/assets/{{ version }}/avito-promotion/company.min.js?v={{ version }}"
         class="lazy"></script>
