--- a/Resources/view/admin/company/new/template.html.twig
+++ b/Resources/view/admin/company/new/template.html.twig
@@ -11,7 +11,7 @@
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block stylesheets %}
-    <link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
+    <link href="/assets/{{ version }}/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
 {% endblock %}
 
 
@@ -22,8 +22,8 @@
 
 
 {% block javascript %}
-<script nonce='{{ csp_nonce() }}' async data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
+<script nonce='{{ csp_nonce() }}' async data-src='/assets/{{ version }}/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
             class='lazy'></script>
-    <script nonce='{{ csp_nonce() }}' async data-src="/assets/avito-promotion/company.js?v={{ version }}"
+    <script nonce='{{ csp_nonce() }}' async data-src="/assets/{{ version }}/avito-promotion/company.js?v={{ version }}"
             class="lazy"></script>
 {% endblock %}
